# Order_service

./: alembic.ini  config.py  database.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2023_12_11_2113-07bc378c3a06_create_table_deliveryboy.py  2023_12_11_2115-8d6bd2b65438_add_column_age_to_deliveryboy.py  2023_12_13_2019-a70fd8a1c681_create_table_delivery_boy.py  2023_12_13_2110-83144edc2126_create_order_service_models.py  2024_01_08_2054-684222a959c6_.py
src/: models.py
src/chat/: manager.py  models.py  router.py  wb_socket.py
src/orders/: models.py  router.py  schemas.py  service.py  utils.py
templates/: base.html  chat.html  navbar.html
tests/delivery_boy/: conftest.py  test_delivery_boy.py
tests/orders/: conftest.py  test_order.py
